Ensure project title is visible in the Dashboard

--- a/app/assets/stylesheets/hera/modules.scss
+++ b/app/assets/stylesheets/hera/modules.scss
@@ -205,7 +205,7 @@
 }
 
 .page-title {
-  margin: 1rem 1.5rem;
+  margin: 1.5rem 0;
 }
 
 pre {
